// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 35922,
}
`;

exports[`TWAMM #executeTWAMMOrders gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 391026,
}
`;

exports[`TWAMM #modifyLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 40816,
}
`;

exports[`TWAMM #submitLongTermOrder for token0 gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 123224,
}
`;

exports[`TWAMM #submitLongTermOrder for token1 gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 143122,
}
`;

exports[`TWAMM single pool sell tests gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 129910,
}
`;

exports[`TWAMM single pool sell tests gas zeroForOne=false 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 136142,
}
`;
